# kcat

./: .appveyor.yml  .dir-locals.el  .dockerignore  .doozer.json  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.Debian  LICENSE  LICENSE.base64  LICENSE.getdelim  Makefile  README.md  USAGE.rst  avro.c  base64.c  base64.h  bootstrap.sh  build_Dockerfile  build_ubuntu_kafkacat.sh  configure  configure.kafkacat  configure.kc  configure.kfc  configure.self  format.c  getdelims.c  input.c  input.h  json.c  kafkacat.1  kafkacat.c  kafkacat.h  kcat.1  kcat.c  kcat.h  meson.build  meson_options.txt  rdendian.h  (+3 more)
.github/workflows/: codeql-analysis.yml  docker-build.yml
.profile.d/: 000-kafkacat.sh
binary/: kafkacat
debian/: changelog  control  copyright  files  gbp.conf  kafkacat.1  kafkacat.substvars  kcat.install  manpages  rules  watch
debian/patches/: disable-silent-rules-support.patch  series
doc/: Makefile  kafkacat.1  kafkacat.1.html  kafkacat.md  kc.1  kc.1.html  kc.md  kfc.1  kfc.1.html  kfc.md
docs/: kafkacat-usage.rst
meson/: rdkafka.wrap  yajl.wrap
mklove/: Makefile.base
rpm/: kafkacat.spec  kc.spec  kcat.spec  kfc.spec
src/: common.c  common.h  consumer.c  kc.c  kfc.c  metadata.c  producer.c
tests/: 0000-unit.sh  0001-exit_eof.sh  0002-delim.sh  0003-avro.sh  0003-json.sh  0004-base64.sh  0004-piped_producer.sh  Makefile  README.md  basic_schema.avsc  helpers.sh
tools/: bootstrap.sh  semver
win32/: .gitignore  getdelim.c  kafkacat.sln  kafkacat.vcxproj  kcat.rc  kcat.sln  kcat.vcxproj  packages.config  resource.h  win32_config.h
(+7 files in other folders)
